# tracia-python

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: __init__.py  test_client.py  test_errors.py  test_llm.py  test_types.py  test_utils.py
tracia/: __init__.py  _client.py  _constants.py  _errors.py  _http.py  _llm.py  _session.py  _streaming.py  _types.py  _utils.py
tracia/resources/: __init__.py  prompts.py  spans.py
