[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracia"
version = "0.3.0"
description = "LLM prompt management and tracing SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tracia", email = "hello@tracia.io" }
]
keywords = [
    "llm",
    "prompt",
    "tracing",
    "observability",
    "openai",
    "chatgpt",
    "anthropic",
    "claude",
    "google",
    "gemini",
    "ai",
    "litellm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "litellm>=1.30.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://tracia.io"
Documentation = "https://docs.tracia.io"
Repository = "https://github.com/tracia/tracia-python"
Issues = "https://github.com/tracia/tracia-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["tracia"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["tracia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
